2013-08-02  Ryosuke Niwa  <rniwa@webkit.org>

        FormAssociatedElement shouldn't create out-of-tree FormAttributeTargetObserver
        https://bugs.webkit.org/show_bug.cgi?id=119309

        Reviewed by Kent Tamura.

        Merge https://chromium.googlesource.com/chromium/blink/+/6fbdcbf311de539107bc28711b3f7a527176e97b.

        I'm not merging the test since the attached test case only works when the shadow DOM API is enabled.

        * html/FormAssociatedElement.cpp:
        (WebCore::FormAssociatedElement::formAttributeChanged):
        (WebCore::FormAssociatedElement::resetFormAttributeTargetObserver):

2013-08-02  Christophe Dumez  <ch.dumez@sisa.samsung.com>

        compareDocumentPosition() should report PRECEDING or FOLLOWING information even if nodes are disconnected
        https://bugs.webkit.org/show_bug.cgi?id=119316

        Reviewed by Ryosuke Niwa.

        As per the latest specification, compareDocumentPosition() should report PRECEDING or FOLLOWING
        information even if nodes are disconnected:
        - http://dom.spec.whatwg.org/#dom-node-comparedocumentposition

        This behavior is consistent with both IE10, Firefox 22 and since recently Blink.

        No new tests, covered by existing tests.

        * dom/Node.cpp:
        (WebCore::compareDetachedElementsPosition):
        (WebCore::Node::compareDocumentPosition):

2013-08-02  Simon Fraser  <simon.fraser@apple.com>

        Revert r153632, since it caused fast/forms/change-form-element-document-crash.html
        to assert.

        * html/FormAssociatedElement.cpp:
        (WebCore::FormAssociatedElement::formAttributeChanged):
        (WebCore::FormAssociatedElement::resetFormAttributeTargetObserver):

2013-08-02  Mario Sanchez Prada  <mario.prada@samsung.com>

        Implement atk_text_get_text_*_offset for WORD
        https://bugs.webkit.org/show_bug.cgi?id=114871

        Reviewed by Martin Robinson.
