@@ -1,3 +1,15 @@
+2013-08-02  Patrick Gansterer  <paroga@webkit.org>
+
+        Remove WebCore folder from include statements
+        https://bugs.webkit.org/show_bug.cgi?id=119438
+
+        Reviewed by Darin Adler.
+
+        This aligns the style of the changed files with the other WebCore code.
+
+        * platform/network/curl/CurlDownload.cpp:
+        * platform/network/curl/CurlDownload.h:
+
 2013-08-02  Ryosuke Niwa  <rniwa@webkit.org>
 
         FormAssociatedElement shouldn't create out-of-tree FormAttributeTargetObserver
